0.23.2
  * Fixed problem with switching between stations if stations list has nil stations 
  * Fixed problem with detailed weather for current day

0.23.1
  * Done scroll to child for pannable_area in window popup
  * Added button 'Clear' for window 'Configuring station'
  * Removed 'Expanded/Collapsed' togglebuttons in status window

0.23
  * New design

0.22.4
  * Fixed small memory leaks
  * Corrected package icon

0.22.3
  * Added dependence on the omweather-source
  * Fixed small memory leaks
  * Option 'hours  weather forecast' is enabled by default now

0.22.2
  * Added possibility, automatically to change orientation (a portrait or a landscape) for OS2009
  * Added fullscreen button for application mode 
  * Fixed problem with downloading weather forecast
  * Increased some labels in settings window
  * Fixed problem with proxy config parameter
  * Various small fixes

0.22.1
  * Changed default background to black colour
  * Added omweather-home.desktop for OS2009
  * Removed libhildon-help for OS2009
  * Done transparency for OS2009 

0.22
  * Added precipitation
  * Added possibility to change position of text near of icon on main display
  * Added option 'non-cache' for downloading of weather forecast data
  * Fixed bug #3760 'Missing or erroneous weather status translation'
  * Added clutter animations
  * Added new mode - "Application"

0.21.10
  * Updated French tranlation
  * Fixed the bug #3550 "Problem with data from xoap.weather.com"
  * Added possibility launch popup window with long press instead of simple click FR #2967
  * Fixed problem with red button (delete) on Settings window in OS2006

0.21.9
  * Fixed the bug #3398 "Omweather doesn't show mmHg in main form (Combo mode)"
  * Fixed the bug #3397 "Destroying the hildon desktop after pressing of any button 
    the keyboard (input any of a symbol) in the field ' renaming' in the settings window"
  
0.21.8