@@ -1,6 +1,8 @@
 0.23.2
   * Fixed problem with switching between stations if stations list has nil stations 
   * Fixed problem with detailed weather for current day
+  * Now next station changing in inside popup window without destroying it
+  * Fixed problem with scrolling in popup window
 
 0.23.1
   * Done scroll to child for pannable_area in window popup
